# matrix-rain

./: LICENSE  README.md  matrix-rain.cabal
data/: fragShader.glsl  vertShader.glsl
executable/: Grid.hs  Main.hs  Matrix.hs  Mesh.hs  Types.hs  Util.hs
